src/objects/PC_Line_Reseller_Order__c.object
<CustomObject>
    <fields>
        <fullName>Line_Item_Reseller__c</fullName>
        <label>Line Item Reseller</label>
        <referenceTo>Quote_Line__c</referenceTo>
        <relationshipLabel>PC Line Reseller Order</relationshipLabel>
        <relationshipName>PC_Line_Reseller_Order</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Order_Line_ID__c</fullName>
        <label>Order Line ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Revision__c</fullName>
        <label>Order Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Line_ID__c</fullName>
        <label>Original Line ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Line_ID__c</fullName>
        <formula>Line_Item_Reseller__r.Siebel_ProductId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Line ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Update_Type__c</fullName>
        <label>PC Update Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Row_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel Row ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_Qty__c</fullName>
        <label>Used Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PC Line Reseller Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCO-{000000000}</displayFormat>
        <label>PC Line Reseller Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PC Line Reseller Order</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>